# amazing_deck

./: .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml
.github/: copilot-instructions.md
docs/: CONTENT_FORMAT.md  RECIPES.md
docs/design/: 2026-04-22-layout-thumbnails.md
examples/: cs_ambassador_example.json  simple_example.json
src/amazing_deck/: __init__.py  analyze.py  cli.py  extract.py  generate.py  recipes.py  render.py  thumbnails.py  utils.py
